--- a/css/phone.css
+++ b/css/phone.css
@@ -13,6 +13,7 @@
 #logo {
     margin: 1px 269px;
     border-radius: 5px;
+    align-items: center;
 }
 /* home section */
 #home{
@@ -70,3 +71,15 @@
     font-size: 13px;
     padding: 4px 8px;
 }
+
+@media only screen and (max-width: 600px) {
+    #navbar ul li a {
+        padding: 1px 10px;
+    }
+    #navbar ul{
+        margin-left: -130px;
+    }
+    #logo img{
+        margin-left: -115px;
+    }
+  }
